@@ -2,6 +2,9 @@ LIST OF CHANGES
 
  - remove unused classes for image generation
  - set explicit dist to precise in travis yml
+ - reference find role: when parsing a genome reference string return
+   the delimiter separating strain and transcriptome version along
+   with the organism
 
 release 86.4
  - reference find role: remove unused 'subset' attribute and
